--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
 <body>
   
-  <nav>
-    <a href = '#' id = 'about';>About Us</a>
-    <a href = '#'>Sign Up</a>
-    <a href = '#'>Log In </a>
-  </nav>
+  
+  <div class = 'navDiv'>
+    <nav>
+      <a href = '#'>Home</a>
+      <a href = './about.html' id = 'about';>About Us</a>
+      <a href = '#'>Sign Up</a>
+      <a href = '#'>Log In </a>
+    </nav>
+  </div>
   
   <header>
     <h1>Legicycle: A Data Science Project by Lambda Students</h1> 
@@ -72,11 +76,14 @@
 
 
 
-  <nav>
-    <a href = '#' id = 'about'>About Us</a>
-    <a href = '#'>Sign Up</a>
-    <a href = '#'>Log In </a>
-  </nav>
+  <div class = 'navDiv'>
+    <nav>
+      <a href = '#'>Home</a>
+      <a href = './about.html' id = 'about'>About Us</a>
+      <a href = '#'>Sign Up</a>
+      <a href = '#'>Log In </a>
+    </nav>
+  </div>
 
 </body>
 
