just about done for the day, the color scheme... leaves something to be desired... but achieved MVP.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <nav>
       <a href = '#'>Home</a>
       <a href = './about.html' id = 'about';>About Us</a>
-      <a href = '#'>Sign Up</a>
       <a href = '#'>Log In </a>
+      <a class = 'signUp' href = '#'>Sign Up</a>
     </nav>
   </div>
   
   <header>
     <h1>Legicycle: A Data Science Project by Lambda Students</h1> 
-    <img src = "img/capitolhill.jpg">
+    <img src = "img/capitolGood.jpg">
   </header>
   
   
@@ -80,8 +80,8 @@
     <nav>
       <a href = '#'>Home</a>
       <a href = './about.html' id = 'about'>About Us</a>
-      <a href = '#'>Sign Up</a>
       <a href = '#'>Log In </a>
+      <a class = 'signUp' href = '#'>Sign Up</a>
     </nav>
   </div>
 
