--- a/about.html
+++ b/about.html
@@ -13,27 +13,27 @@
 <body>
   
   <div class = 'navDiv'>
-      <nav>
-        <a href = './index.html'>Home</a>
-        <a href = '#' id = 'about';>About Us</a>
-        <a href = '#'>Sign Up</a>
-        <a href = '#'>Log In </a>
-      </nav>
+    <nav>
+      <a href = '#'>Home</a>
+      <a href = './about.html' id = 'about'>About Us</a>
+      <a href = '#'>Log In </a>
+      <a class = 'signUp' href = '#'>Sign Up</a>
+    </nav>
   </div>
   
   <header>
+    <div class = 'spacer'></div>
     <h1>Meet the Developers</h1> 
-    <img src = "img/capitolhill.jpg">
   </header>
 
   <div class = 'devs'>
-    <div class = 'dev'>
+    <div class = 'dev' id = 'dev1'>
         <div class = 'namePhoto'>
             <img src = '/img/Mike3.PNG'/>
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.A man of true grit.A man of true grit.A man of true grit.A man of true grit.A man of true grit.A man of true grit.A man of true grit.A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -43,7 +43,7 @@
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -53,7 +53,7 @@
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -63,7 +63,7 @@
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -73,7 +73,7 @@
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -83,7 +83,7 @@
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -93,7 +93,7 @@
             <span> Mike Landers </span>
         </div>
         <div class = 'textContent'>
-            A man of true grit.
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
         </div>
     </div>
 
@@ -102,12 +102,12 @@
 
   <div class = 'navDiv'>
     <nav>
-      <a href = './index.html'>Home</a>
-      <a href = '#' id = 'about';>About Us</a>
-      <a href = '#'>Sign Up</a>
+      <a href = '#'>Home</a>
+      <a href = './about.html' id = 'about'>About Us</a>
       <a href = '#'>Log In </a>
+      <a class = 'signUp' href = '#'>Sign Up</a>
     </nav>
-</div>
+  </div>
 
 </body>
 
