did some of day 3 MVP, hosting on netlify now

--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
 
   </div>
 
+  <div class = iconsContainer>
+    <div class = 'icons'>
+      <div class = box>
+        <img src = 'img/Bill.svg' />
+        <p>asdfasdfasdfasdfasdfasdf</p>
+    </div>
+  
+    <div class = 'box'>
+        <img src = 'img/Code.svg' />
+        <p>asdfasdfasdfasdfasdfasdf</p>
+    </div>
+
+    <div class = "box bottomBox">
+        <img src = 'img/Filter.svg' />
+        <p>asdfasdfasdfasdfasdfasdf</p>
+    </div>
+    
+    <div class = 'box bottomBox'>
+        <img src = 'img/pieGraph.svg' />
+        <p>asdfasdfasdfasdfasdfasdf</p>
+    </div>
+  
+    </div>
+  </div>
 
 
 
