--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
   
   <div class = 'navDiv'>
     <nav>
-      <a href = '#'>Home</a>
-      <a href = './about.html' id = 'about'>About Us</a>
+      <a href = '/index.html'>Home</a>
+      <a href = '#' id = 'about'>About Us</a>
       <a href = '#'>Log In </a>
       <a class = 'signUp' href = '#'>Sign Up</a>
     </nav>
@@ -102,8 +102,8 @@
 
   <div class = 'navDiv'>
     <nav>
-      <a href = '#'>Home</a>
-      <a href = './about.html' id = 'about'>About Us</a>
+      <a href = '/index.html'>Home</a>
+      <a href = '#' id = 'about'>About Us</a>
       <a href = '#'>Log In </a>
       <a class = 'signUp' href = '#'>Sign Up</a>
     </nav>
