things are actually starting to come together, still need to replace generic text/photos

--- a/about.html
+++ b/about.html
@@ -26,81 +26,83 @@
     <h1>Meet the Developers</h1> 
   </header>
 
-  <div class = 'devs'>
-    <div class = 'dev' id = 'dev1'>
-        <div class = 'namePhoto'>
-            <img src = '/img/Mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
+  <div class = 'devsContainer'>
+    <div class = 'devs'>
+      <div class = 'dev' id = 'dev1'>
+          <div class = 'namePhoto'>
+              <img src = '/img/Mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
+      <div class = 'dev'>
+          <div class = 'namePhoto'>
+              <img src = '/img/Mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
+      <div class = 'dev'>
+          <div class = 'namePhoto'>
+              <img src = '/img/Mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
+      <div class = 'dev'>
+          <div class = 'namePhoto'>
+              <img src = '/img/Mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
+      <div class = 'dev'>
+          <div class = 'namePhoto'>
+              <img src = '/img/Mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
+      <div class = 'dev'>
+          <div class = 'namePhoto'>
+              <img src = '/img/mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
+      <div class = 'dev'>
+          <div class = 'namePhoto'>
+              <img src = '/img/Mike3.PNG'/>
+              <span> Mike Landers </span>
+          </div>
+          <div class = 'textContent'>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+          </div>
+      </div>
+  
     </div>
-
-    <div class = 'dev'>
-        <div class = 'namePhoto'>
-            <img src = '/img/Mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
-    </div>
-
-    <div class = 'dev'>
-        <div class = 'namePhoto'>
-            <img src = '/img/Mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
-    </div>
-
-    <div class = 'dev'>
-        <div class = 'namePhoto'>
-            <img src = '/img/Mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
-    </div>
-
-    <div class = 'dev'>
-        <div class = 'namePhoto'>
-            <img src = '/img/Mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
-    </div>
-
-    <div class = 'dev'>
-        <div class = 'namePhoto'>
-            <img src = '/img/mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
-    </div>
-
-    <div class = 'dev'>
-        <div class = 'namePhoto'>
-            <img src = '/img/Mike3.PNG'/>
-            <span> Mike Landers </span>
-        </div>
-        <div class = 'textContent'>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
-        </div>
-    </div>
-
   </div>
 
 
-  <div class = 'navDiv'>
+  <div class = 'navDiv bottomNav'>
     <nav>
       <a href = '/index.html'>Home</a>
       <a href = '#' id = 'about'>About Us</a>
