--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <header>
     <h1>Legicycle: A Data Science Project by Lambda Students</h1> 
-    <img src = "img/capitolGood.jpg">
+    <img src = "img/capitolnightstretch.jpg">
   </header>
   
   
@@ -100,7 +100,7 @@
 
 
 
-  <div class = 'navDiv'>
+  <div class = 'navDiv bottomNav'>
     <nav>
       <a href = '#'>Home</a>
       <a href = './about.html' id = 'about'>About Us</a>
