couple more quick changes

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
     <div class = 'icons'>
       <div class = box>
         <img src = 'img/Bill.svg' />
-        <p>asdfasdfasdfasdfasdfasdf</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat.</p>
     </div>
   
     <div class = 'box'>
         <img src = 'img/Code.svg' />
-        <p>asdfasdfasdfasdfasdfasdf</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat.</p>
     </div>
 
     <div class = "box bottomBox">
         <img src = 'img/Filter.svg' />
-        <p>asdfasdfasdfasdfasdfasdf</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat.</p>
     </div>
     
     <div class = 'box bottomBox'>
         <img src = 'img/pieGraph.svg' />
-        <p>asdfasdfasdfasdfasdfasdf</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat.</p>
     </div>
   
     </div>
