everything done for wednesday, still need more info about the project to replace the lorem ipsum

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <nav>
       <a href = '/index.html'>Home</a>
       <a href = '#' id = 'about'>About Us</a>
-      <a href = '#'>Log In </a>
-      <a class = 'signUp' href = '#'>Sign Up</a>
+      <a href = 'https://zombie-legislation.herokuapp.com/home'>Log In </a>
+      <a class = 'signUp' href = 'https://zombie-legislation.herokuapp.com/home'>Sign Up</a>
     </nav>
   </div>
   
@@ -32,6 +32,7 @@
           <div class = 'namePhoto'>
               <img src = '/img/Mike3.PNG'/>
               <span> Mike Landers </span>
+              <p>Team Lead</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -40,8 +41,9 @@
   
       <div class = 'dev'>
           <div class = 'namePhoto'>
-              <img src = '/img/Mike3.PNG'/>
-              <span> Mike Landers </span>
+              <img src = '/img/JasonResized.PNG'/>
+              <span> Jason Belgard </span>
+              <p>User Interface Designer</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -50,8 +52,9 @@
   
       <div class = 'dev'>
           <div class = 'namePhoto'>
-              <img src = '/img/Mike3.PNG'/>
-              <span> Mike Landers </span>
+              <img src = '/img/JackResized.PNG'/>
+              <span> Jack Ober </span>
+              <p>User Interface Designer</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -60,8 +63,9 @@
   
       <div class = 'dev'>
           <div class = 'namePhoto'>
-              <img src = '/img/Mike3.PNG'/>
-              <span> Mike Landers </span>
+              <img src = '/img/Anthonyresized.PNG'/>
+              <span> Anthony Stachowitz </span>
+              <p>Front End Architect</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -70,8 +74,9 @@
   
       <div class = 'dev'>
           <div class = 'namePhoto'>
-              <img src = '/img/Mike3.PNG'/>
-              <span> Mike Landers </span>
+              <img src = '/img/JonathanResized.PNG'/>
+              <span> Jonathan David </span>
+              <p>Front End Architect</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -80,8 +85,9 @@
   
       <div class = 'dev'>
           <div class = 'namePhoto'>
-              <img src = '/img/mike3.PNG'/>
-              <span> Mike Landers </span>
+              <img src = '/img/JoshResized.PNG'/>
+              <span> Josh Kersting </span>
+              <p>Back End Architect</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -90,8 +96,9 @@
   
       <div class = 'dev'>
           <div class = 'namePhoto'>
-              <img src = '/img/Mike3.PNG'/>
-              <span> Mike Landers </span>
+              <img src = '/img/WillResized.PNG'/>
+              <span> Will Jarvis </span>
+              <p>Data Science Wizard</p>
           </div>
           <div class = 'textContent'>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
@@ -106,8 +113,8 @@
     <nav>
       <a href = '/index.html'>Home</a>
       <a href = '#' id = 'about'>About Us</a>
-      <a href = '#'>Log In </a>
-      <a class = 'signUp' href = '#'>Sign Up</a>
+      <a href = 'https://zombie-legislation.herokuapp.com/home'>Log In </a>
+      <a class = 'signUp' href = 'https://zombie-legislation.herokuapp.com/home'>Sign Up</a>
     </nav>
   </div>
 
