--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav>
       <a href = '#'>Home</a>
       <a href = './about.html' id = 'about';>About Us</a>
-      <a href = '#'>Log In </a>
-      <a class = 'signUp' href = '#'>Sign Up</a>
+      <a href = 'https://zombie-legislation.herokuapp.com/home'>Log In </a>
+      <a class = 'signUp' href = 'https://zombie-legislation.herokuapp.com/home'>Sign Up</a>
     </nav>
   </div>
   
@@ -104,8 +104,8 @@
     <nav>
       <a href = '#'>Home</a>
       <a href = './about.html' id = 'about'>About Us</a>
-      <a href = '#'>Log In </a>
-      <a class = 'signUp' href = '#'>Sign Up</a>
+      <a href = 'https://zombie-legislation.herokuapp.com/home'>Log In </a>
+      <a class = 'signUp' href = 'https://zombie-legislation.herokuapp.com/home'>Sign Up</a>
     </nav>
   </div>
 
