done with bio descriptions for the team

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
               <p>Team Lead</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>A natural born leader, Mike Landers will stop at nothing to see a project through to its completion.</p> <p>When he found us, we were boys. Today, we are men. Men who can tell you a thing or two about legislation.</p>
           </div>
       </div>
   
@@ -46,7 +46,7 @@
               <p>User Interface Designer</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>An all around great guy and father of three, when it comes to carousel design, Jason Belgard is your man.</p> <p>Unbeknownst to his family, he spends his nights and weekends fighting crime in spandex.</p>
           </div>
       </div>
   
@@ -57,7 +57,7 @@
               <p>User Interface Designer</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>A man of many talents, Jack Ober is a lot of fun at parties.</p> <p>Whether it be juggling five objects, dancing with fire, or learning to code so that he can actually make some money, Jack is always looking for a new skill to pick up.</p>
           </div>
       </div>
   
@@ -68,7 +68,7 @@
               <p>Front End Architect</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>A man of great wealth, Anthony Stachowitz is said to have made his fortune by investing in Fortnite.</p><p>His children currently enjoy a lifetime supply of free skins in the game.</p>
           </div>
       </div>
   
@@ -79,7 +79,7 @@
               <p>Front End Architect</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>Little is known about Jonathan David...</p><p>He pushes his commits to github from a LAN cafe in russia to conceal the location of his home.</p>
           </div>
       </div>
   
@@ -90,7 +90,7 @@
               <p>Back End Architect</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>Previously named 'Josh Sting', Josh had his last name legally changed to Kersting after being asked one too many times if he was related to the musician.</p><p>He is not a fan of Sting's music.</p>
           </div>
       </div>
   
@@ -101,7 +101,7 @@
               <p>Data Science Wizard</p>
           </div>
           <div class = 'textContent'>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum venenatis tortor eu placerat. Nullam sed mi felis. Aliquam consequat orci ut elit sagittis sagittis. Curabitur ultrices a est eget mollis. Donec volutpat, arcu quis suscipit rhoncus, lacus dolor commodo ante, ac mollis sapien sem eu felis.
+             <p>A man of tact and style, Will Jarvis showed up to every Zoom in a suit and tie.</p><p>His ability to create algorithms and manipulate data to his will is beyond the rest of us. We would be lost without him.</p>
           </div>
       </div>
   
