MVP pretty much done! still need to write up the README.

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
               <p>Back End Architect</p>
           </div>
           <div class = 'textContent'>
-             <p>Previously named 'Josh Sting', Josh had his last name legally changed to Kersting after being asked one too many times if he was related to the musician.</p><p>He is not a fan of Sting's music.</p>
+             <p>Previously named 'Josh Sting', Josh had his last name legally changed to Kersting after being asked one too many times if he was related to the musician.</p><p>Josh is not a fan of Sting's music.</p>
           </div>
       </div>
   
