changed anthonys bio

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
               <p>Front End Architect</p>
           </div>
           <div class = 'textContent'>
-             <p>A man of great wealth, Anthony Stachowitz is said to have made his fortune by investing in Fortnite.</p><p>His children currently enjoy a lifetime supply of free skins in the game.</p>
+             <p>Ranked number seven on Forbes 'Richest Men of 2018', Anthony Stachowitz is said to have made his fortune by investing in the online gaming sensation, Fortnite.</p><p>His children currently enjoy a lifetime supply of free skins in the game.</p>
           </div>
       </div>
   
