--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
               <p>Front End Architect</p>
           </div>
           <div class = 'textContent'>
-             <p>Little is known about Jonathan David...</p><p>He pushes his commits to github from a LAN cafe in russia to conceal the location of his home.</p>
+             <p>Little is known about Jonathan David...</p><p>He pushes his commits to Github from a LAN cafe in russia to conceal the location of his home.</p>
           </div>
       </div>
   
@@ -101,7 +101,7 @@
               <p>Data Science Wizard</p>
           </div>
           <div class = 'textContent'>
-             <p>A man of tact and style, Will Jarvis showed up to every Zoom in a suit and tie.</p><p>His ability to create algorithms and manipulate data to his will is beyond the rest of us. We would be lost without him.</p>
+             <p>A man of tact and style, Will Jarvis shows up to every Zoom in a suit and tie.</p><p>His ability to create algorithms and manipulate data to his will is beyond the rest of us. We would be lost without him.</p>
           </div>
       </div>
   
