last minute changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class = 'icons'>
       <div class = box>
         <img src = 'img/Bill.svg' />
-        <p>Whenever a bill makes it through the system and is signed into law, it is added to our databassed of passed bills.</p>
+        <p>Whenever a bill makes it through the system and is signed into law, it is added to our database of passed bills.</p>
     </div>
   
     <div class = 'box'>
